@@ -1,3 +1,8 @@
+2013-11-05  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libdtrace/dt_decl.c (dt_decl_func): Allocate declarator after
+	prototype checks.
+
 2013-11-04  Nick Alcock  <nick.alcock@oracle.com>
 
 2013-11-04  Nick Alcock  <nick.alcock@oracle.com>
